--- a/gradle-functional/build.gradle
+++ b/gradle-functional/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    api project(':gradle-base')
+    api project(':TrainingWheels-Gradle-Base')
     api gradleTestKit()
     api libs.junit
     api libs.guava
