Actually Publish a jar.

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ subprojects {
     publishing {
         publications {
             mavenJava(MavenPublication) {
+                from components.java
             }
         }
         repositories {
