--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     alias(libs.plugins.licenser).apply(false)
 }
 
-group = 'net.minecraftforge'
+group = 'net.neoforged'
 version = rootProject.gradleutils.getTagOffsetVersion()
 
 changelog {
