--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ plugins {
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
-            plugin('gradleutils', 'net.neoforged.gradleutils').version('2.+')
+            plugin('gradleutils', 'net.neoforged.gradleutils').version('3.0.0-alpha.10')
             plugin('licenser', 'org.cadixdev.licenser').version('0.6.1')
             plugin('nexus', 'io.github.gradle-nexus.publish-plugin').version('1.3.0')
 
