Add support for new hooks on runs. Fix tests.

--- a/gradle-functional/build.gradle
+++ b/gradle-functional/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    api project(':TrainingWheels-Gradle-Base')
+    api project(':gradle-base')
     api gradleTestKit()
     api libs.junit
     api libs.guava
