Add support for reusing a directory Remove the develocity plugin if it is not used, it is not directly compatible with the configuration cache.

--- a/gradle-functional/build.gradle
+++ b/gradle-functional/build.gradle
@@ -3,7 +3,8 @@ dependencies {
     api gradleTestKit()
     api libs.junit
     api libs.guava
-    api(libs.spock){
+    api (libs.spock) {
         exclude group: 'org.apache.groovy'
     }
+    api libs.bundles.commons
 }
