--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    alias(libs.plugins.nexus)
     alias(libs.plugins.gradleutils)
     alias(libs.plugins.licenser).apply(false)
 }
@@ -9,7 +8,7 @@ gradleutils {
     version {
         branches.suffixBranch()
     }
-    setupCentralPublishing()
+    //setupCentralPublishing()
 }
 version = gradleutils.version
 
