--- a/settings.gradle
+++ b/settings.gradle
@@ -12,12 +12,11 @@ plugins {
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
-            plugin('gradleutils', 'net.neoforged.gradleutils').version('3.0.0-alpha.10')
-            plugin('licenser', 'org.cadixdev.licenser').version('0.6.1')
-            plugin('nexus', 'io.github.gradle-nexus.publish-plugin').version('1.3.0')
+            plugin('gradleutils', 'net.neoforged.gradleutils').version('5.0.3')
+            plugin('licenser', 'net.neoforged.licenser').version('0.7.5')
 
             final mockito = version 'mockito', '4.11.0'
-            final groovy = version 'groovy', '3.0.13'
+            final groovy = version 'groovy', '4.0.27'
             final junit = version 'junit', '5.9.2'
 
             library('jimfs', 'com.google.jimfs:jimfs:1.2')
@@ -33,7 +32,7 @@ dependencyResolutionManagement {
             library('groovy-core', 'org.codehaus.groovy', 'groovy').versionRef(groovy)
             bundle('groovy', ['groovy-core'])
 
-            library('spock', 'org.spockframework:spock-core:2.1-groovy-3.0')
+            library('spock', 'org.spockframework:spock-core:2.3-groovy-4.0')
             library('junit', 'org.junit.jupiter', 'junit-jupiter').versionRef(junit)
         }
     }
