--- a/.github/workflows/publish-prs.yml
+++ b/.github/workflows/publish-prs.yml
@@ -24,6 +24,7 @@ jobs:
     uses: neoforged/actions/.github/workflows/publish-prs.yml@main
     with:
       artifact_base_path: net/neoforged/trainingwheels/
+      uploader_workflow_name: Build and test PRs
     secrets:
       PR_PUBLISHING_GH_APP_ID: ${{ secrets.PR_PUBLISHING_GH_APP_ID }}
       PR_PUBLISHING_GH_APP_KEY: ${{ secrets.PR_PUBLISHING_GH_APP_KEY }}
