--- a/settings.gradle
+++ b/settings.gradle
@@ -12,9 +12,8 @@ plugins {
 dependencyResolutionManagement {
     versionCatalogs {
         libs {
-            plugin('gradleutils', 'net.neoforged.gradleutils').version('3.0.0-alpha.10')
-            plugin('licenser', 'org.cadixdev.licenser').version('0.6.1')
-            plugin('nexus', 'io.github.gradle-nexus.publish-plugin').version('1.3.0')
+            plugin('gradleutils', 'net.neoforged.gradleutils').version('5.0.3')
+            plugin('licenser', 'net.neoforged.licenser').version('0.7.5')
 
             final mockito = version 'mockito', '4.11.0'
             final groovy = version 'groovy', '3.0.13'
