Re-enable central publishing and publish 2.0

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ gradleutils {
     version {
         branches.suffixBranch()
     }
-    //setupCentralPublishing()
+    setupCentralPublishing()
 }
 version = gradleutils.version
 
